--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
-project(ipgw_linux_c)
+project(ipgw)
 set(CURL_LIBRARY "-lcurl")
 find_package(CURL REQUIRED)
-add_executable(ipgw_linux_c main.cpp)
+aux_source_directory(module ALL_MODULE) # add all file under module/ to main.
+add_executable(ipgw main.cpp ${ALL_MODULE})
+MESSAGE(STATUS ${ALL_MODULE})
 INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(ipgw_linux_c ${CURL_LIBRARIES})
+TARGET_LINK_LIBRARIES(ipgw ${CURL_LIBRARIES})
+TARGET_LINK_LIBRARIES(ipgw libcjson.a)
 set(CMAKE_CXX_STANDARD 14)
