--- a/settings.json
+++ b/settings.json
@@ -13,8 +13,9 @@
     "password": "${password}",
     "save_me": "0"
   },
-  "headers": {},
+  "useragent": "Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.71 Safari/537.36",
   "default": "5",
   "log_url": "http://ipgw.neu.edu.cn",
-  "man_url": "http://ipgw.neu.edu.cn:8800/"
+  "man_url": "http://ipgw.neu.edu.cn:8800/",
+  "timeout": 3
 }
