--- a/settings.json
+++ b/settings.json
@@ -1,21 +1,11 @@
 {
   "postdata": {
-    "action": [
-      "login",
-      "logout"
-    ],
-    "ac_id": "1",
-    "user_ip": "",
-    "nas_ip": "",
-    "user_mac": "",
-    "URL": "",
-    "username": "${username}",
-    "password": "${password}",
-    "save_me": "0"
+    "login": "action=login&ac_id=1&user_ip=&nas_ip=&user_mac=&url=&username=${username}&password=${password}&save_me=0",
+    "logout": "action=logout&username=${username}&password=${password}&ajax=1"
   },
   "useragent": "Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.71 Safari/537.36",
   "default": "5",
-  "log_url": "http://ipgw.neu.edu.cn",
+  "log_url": "http://ipgw.neu.edu.cn/srun_portal_pc.php?ac_id=1&",
   "man_url": "http://ipgw.neu.edu.cn:8800/",
   "timeout": 3
 }
