Modify CMake file. The new file can auto generate make install command to install the programme by one command. WIN32  build support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,19 @@
 cmake_minimum_required(VERSION 3.13)
 project(ipgw)
-set(CURL_LIBRARY "-lcurl")
-find_package(CURL REQUIRED)
-aux_source_directory(module ALL_MODULE) # add all file under module/ to main.
-add_executable(ipgw main.c ${ALL_MODULE})
-MESSAGE(STATUS ${ALL_MODULE})
-INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(ipgw ${CURL_LIBRARIES})
-TARGET_LINK_LIBRARIES(ipgw libcjson.a)
-set(CMAKE_CXX_STANDARD 14)
+#MESSAGE(STATUS ${CMAKE_C_FLAGS_DEBUG})
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif (NOT CMAKE_BUILD_TYPE)
+if (UNIX)
+    MESSAGE(STATUS "linux build start")
+    set(CURL_LIBRARY "-lcurl")
+    find_package(CURL REQUIRED)
+    aux_source_directory(module ALL_MODULE) # add all file under module/ to main.
+    add_executable(ipgw main.c ${ALL_MODULE})
+    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(ipgw ${CURL_LIBRARY})
+    TARGET_LINK_LIBRARIES(ipgw libcjson.a)
+    set(CMAKE_CXX_STANDARD 14)
+elseif (WIN32)
+    MESSAGE(STATUS "Windows does support this program, please wait for me to complete the cmakelist file.")
+endif ()
