Modify CMake file and add install option. Be careful when you use sudo! Modify openhelpfile module and add error handler. Modify Readme.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,15 @@ if (NOT CMAKE_BUILD_TYPE)
 endif (NOT CMAKE_BUILD_TYPE)
 if (UNIX)
     MESSAGE(STATUS "linux build start")
-    set(CURL_LIBRARY "-lcurl")
     find_package(CURL REQUIRED)
     aux_source_directory(module ALL_MODULE) # add all file under module/ to main.
     add_executable(ipgw main.c ${ALL_MODULE})
     INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
-    TARGET_LINK_LIBRARIES(ipgw ${CURL_LIBRARY})
+    TARGET_LINK_LIBRARIES(ipgw curl)
     TARGET_LINK_LIBRARIES(ipgw libcjson.a)
     set(CMAKE_CXX_STANDARD 14)
+    INSTALL(DIRECTORY src/ DESTINATION $ENV{HOME}/.ipgw
+            PATTERN * PERMISSIONS OWNER_WRITE WORLD_READ)
 elseif (WIN32)
     MESSAGE(STATUS "Windows does support this program, please wait for me to complete the cmakelist file.")
 endif ()
