--- a/src/settings.json
+++ b/src/settings.json
@@ -7,5 +7,12 @@
   "default": "5",
   "log_url": "http://ipgw.neu.edu.cn/srun_portal_pc.php?ac_id=1&",
   "man_url": "http://ipgw.neu.edu.cn:8800/",
+  "match_pattern": "%*3764c%s",
+  "compare_string": {
+    "user not found": "E2531:",
+    "password error": "E2553:",
+    "already online": "E2620:",
+    "connected": "op\">"
+  },
   "timeout": 3
 }
